Fixed alignment of left and right arrows

--- a/public/styles.css
+++ b/public/styles.css
@@ -23,6 +23,11 @@ div {
   padding: .5em;
 }
 
+.carouselAndPgIndicator {
+  display: grid;
+  grid-template-rows: 100% 20px;
+}
+
 .suggestedProductsCarousel {
   display: grid;
   grid-template-columns: 5% 18% 18% 18% 18% 18% 5%;
@@ -110,29 +115,18 @@ div {
   position: relative;
 }
 
-.rightArrow {
-  font-size: 36px;
-  line-height: 0;
-  height: 135px;
-  overflow: hidden;
-  position: absolute;
-  text-align: right;
-  right: 0px;
-  top: 0px;
+.arrow {
+  width: 18px;
+  height: 36px;
+}
+
+.arrowContainer {
+  display: flex;
+  align-items: center;
+  height: 220px;
   width: 32px;
 }
 
-#leftArrow {
-  font-size: 36px;
-  line-height: 0;
-  height: 135px;
-  overflow: hidden;
-  position: absolute;
-  text-align: left;
-  right: 0px;
-  top: 0px;
-  width: 32px;
-}
 
 .title {
   line-height: 1;
